Fri Jan 13 23:09:56 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_component/servant_svs.h:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:

          Fixed a bug where the attributes of a component's supported
          interfaces (if any) were not getting their initialization
          code block in the generate servant's method set_attributes().
          Thanks to Michael Frommberger
          <michael dot frommberger at gmx dot net> for reporting the
          problem.

        * TAO_IDL/be_include/be_visitor_component_scope.h:

          Cosmetic changes.

Wed Jan 13 16:30:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * tao/UB_String_Argument_T.cpp:
          Was also directly calling delete [] on CORBA::strings
          instead of using CORBA::string_free(). As this delete []
          call was also inside a template however, it needed to actualy
          use the S_var::s_traits::release () that mapped this
          to the correct CORBA::string_free() call.

Wed Jan 11 12:25:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * tests/Sequence_Unit_Tests/bounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
          These test were directly calling delete [] on CORBA::strings
          instead of using CORBA::string_free(). As these delete []
          calls were inside a template however, they needed to actualy
          use the tested_element_traits::release () that mapped these
          to the correct CORBA::string_free() call.

Tue Jan  3 14:02:44 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Active_Object_Map.cpp:
          Disable some logging with minimum corba

Fri Dec 30 12:14:06 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/PortableServer.h:
          Added include of AdapterActivatorA.h
