@@ -1,3 +1,13 @@
+Mon Jan 16 08:55:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Cleanup_Func_Registry.h:
+          Export this class, needed in some configurations due to inlining
+
+        * tests/Param_Test/anyop.cpp:
+        * tests/Param_Test/driver.cpp:
+        * tests/Param_Test/server.cpp:
+          Fixed memory leaks
+
 Fri Jan 13 23:09:56 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be_include/be_visitor_component/servant_svs.h:
